# rp-microcontroller-rs

./: .gitignore  Cargo.toml  ON-CHIP_DEBUGGING.md  README.md  generate.sh
.cargo/: config
boards/rp-pico/: Cargo.toml  LICENSE-MIT  README.md  build.rs  link.x  memory.x
boards/rp-pico/examples/blink/: main.rs
boards/rp-pico/examples/panic/: main.rs
boards/rp-pico/examples/uart/: main.rs  uart.rs
boards/rp-pico/openocd_cfg/: jlink_addon.cfg
boards/rp-pico/src/: bs2_default_padded_checksummed.S  lib.rs
examples/blink/: main.rs
hal/: Cargo.toml  README.md
hal/src/: lib.rs
ide/: rp-pico-workspace.code-workspace
pac/rp2040/: Cargo.toml  README.md
util/rp2040-panic-usb-boot/: Cargo.toml  README.md
util/rp2040-panic-usb-boot/src/: lib.rs
