[package]
name = "rp2040"
version = "0.1.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "BSD-3-Clause AND ( MIT OR Apache-2.0 )"
edition = "2018"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.7.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]

[dev-dependencies]
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
