[package]
name = "rp-hal"
version = "0.0.1"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "HAL and peripheral access API for microcontroller family containing RP2040"
readme = "README.md"
repository = "https://github.com/jannic/rp-microcontroller-rs/"
homepage = "https://github.com/jannic/rp-microcontroller-rs/"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.7.0"
vcell = "0.1.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.rp2040]
path = "../pac/rp2040"
version = "0.1.0"
optional = true

[features]
2040 = ["rp2040"]
