[package]
name = "rp-pico"
version = "0.1.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jannic/rp-microcontroller-rs/"
homepage = "https://github.com/jannic/rp-microcontroller-rs/"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.7.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[dependencies.rp-hal]
path = "../../hal"
version = "0.0.1"
default-features = false
features = ["2040"]

[features]
rt = ["cortex-m-rt/device"]

[dev-dependencies]
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"

[dev-dependencies.rp-hal]
path = "../../hal"
version = "0.0.1"
default-features = false
features = ["2040"]
