[package]
name = "rp-pico"
description = "Board support package for the Raspberry Pi Pico"
version = "0.1.3"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "BSD-3-Clause AND MIT OR BSD-3-Clause AND Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jannic/rp-microcontroller-rs/"
homepage = "https://github.com/jannic/rp-microcontroller-rs/"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.7.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"
features = ["device"]

[dependencies.rp-hal]
path = "../../hal"
version = "0.0.1"
default-features = false
features = ["2040"]

[features]
rt = ["cortex-m-rt/device"]

[dev-dependencies]
cortex-m-rt = "0.6.13"

[dev-dependencies.rp2040-panic-usb-boot]
path = "../../util/rp2040-panic-usb-boot/"
version = "0.1.0"

[dev-dependencies.rp-hal]
path = "../../hal"
version = "0.0.1"
default-features = false
features = ["2040"]

