[package]
name = "rp2040"
description = "Peripheral access API for rp2040 microcontrollers (generated using svd2rust)"
version = "0.1.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "BSD-3-Clause AND (MIT OR Apache-2.0)"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jannic/rp-microcontroller-rs/"
homepage = "https://github.com/jannic/rp-microcontroller-rs/"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.7.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]
